# Spin_the_bottle

spin_the_bottle/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
spin_the_bottle/behaviors/bottlehello/: bottlehello.pml  manifest.xml
spin_the_bottle/behaviors/bottlehello/behavior_1/: behavior.xar
spin_the_bottle/documentation/: instruction.odt
spin_the_bottle/include/spin_the_bottle/: ActionLib.h  DetectFace.h  LineProjectionE.h  PreGame.h  WorldCoordinates.h
spin_the_bottle/src/: ActionClientSay.cpp  ActionNaoNeck.cpp  DetectFace.cpp  DetectFace.cpp~  FaceDetection.cpp  LineProjectionE.cpp  LineProjectionE.cpp~  PreGame.cpp  PreGame.cpp~  WorldCoordinates.cpp  WorldCoordinates.cpp~  copy  my_subscriber.cpp  my_subscriber.cpp~
